[gd_scene load_steps=13 format=3 uid="uid://dv7wsjusc4kpi"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_hnj3e"]
[ext_resource type="PackedScene" uid="uid://dw64ibpnrt1bu" path="res://scenes/slash.tscn" id="2_md23f"]
[ext_resource type="PackedScene" uid="uid://ojg0qw01vfjx" path="res://scenes/dash_ghost_effect.tscn" id="2_teem6"]
[ext_resource type="SpriteFrames" uid="uid://bjfh85pfafb4h" path="res://resources/player.tres" id="3_qibpi"]
[ext_resource type="Script" path="res://scripts/player_animations.gd" id="3_wxloe"]
[ext_resource type="Texture2D" uid="uid://kfm4rtw7sldu" path="res://assets/TinySword/cursor.png" id="4_57dgs"]
[ext_resource type="Script" path="res://scripts/shield.gd" id="6_b8h4f"]
[ext_resource type="PackedScene" uid="uid://c3k7ii7vaqjay" path="res://scenes/health_bar.tscn" id="6_l2k7d"]
[ext_resource type="Script" path="res://scripts/dash_hitbox.gd" id="9_m6x35"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y035s"]
radius = 27.0185

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uiola"]
size = Vector2(48, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur7h8"]
size = Vector2(79, 74)

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 13
script = ExtResource("1_hnj3e")
Slash = ExtResource("2_md23f")
DashGhostEffect = ExtResource("2_teem6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = ExtResource("3_qibpi")
animation = &"attack_shotgun"
autoplay = "idle"
frame_progress = 0.662541
script = ExtResource("3_wxloe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_y035s")

[node name="Cursor" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(125, -15)
texture = ExtResource("4_57dgs")

[node name="Shield" type="Area2D" parent="Cursor"]
collision_layer = 128
collision_mask = 136
script = ExtResource("6_b8h4f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Shield"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_uiola")

[node name="HealthBar" parent="." instance=ExtResource("6_l2k7d")]
offset_left = -70.0
offset_top = -89.0
offset_right = 69.0
offset_bottom = -62.0
health = 3

[node name="HitInvincibility" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GhostEffectTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashHitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 5
monitoring = false
script = ExtResource("9_m6x35")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHitbox"]
position = Vector2(4.5, 2)
shape = SubResource("RectangleShape2D_ur7h8")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_attack_animation_finished"]
[connection signal="body_entered" from="Cursor/Shield" to="Cursor/Shield" method="_on_body_entered"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_health_changed"]
[connection signal="timeout" from="HitInvincibility" to="." method="_on_hit_invincibility_timeout"]
[connection signal="timeout" from="GhostEffectTimer" to="." method="_on_ghost_effect_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="area_entered" from="DashHitbox" to="." method="_on_dash_hitbox_area_entered"]
[connection signal="body_entered" from="DashHitbox" to="." method="_on_dash_hitbox_body_entered"]
